Removed useMostVisibleComponent for being too buggy.

--- a/frontend/src/components/MainPage/Expertises/Expertises.css
+++ b/frontend/src/components/MainPage/Expertises/Expertises.css
@@ -1,3 +1,8 @@
+.expertises__wrapper {
+  height: fit-content;
+  scroll-margin-top: 120px;
+}
+
 .expertises {
   position: relative;
   display: flex;
